finished home page week 2

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,13 +10,34 @@ nav a {
 h1 {
     color: darkblue;
 }
-img {
+main img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: 1px solid white;
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
 p {
-    padding: 10px;
+    padding: 0;
+}
+main {
+    max-width: 840px;
+}
+aside {
+    width: 20rem ;
+    margin: 1rem;
+    border: 1px dotted white;
+    padding:1rem 2rem;
+    background-color: #eee;  /* #6c93bd  #d2dfe5*/
+    color: #333;
+}
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 15px;
+    border-top: 1px dotted rgb(0 0 0 /.5);
+    text-align: center;
 }
