--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,43 +1,89 @@
+:root {
+    --background_clr_arena: #eee;
+    --theme_color: #5d7c80; /* #698588; /*#485e52 */
+}
+
+* {
+   margin: 0; 
+   padding: 0;
+   box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family:"Lexend Deca", sans-serif; ;
+}
+
 nav {
-    background-color: darkblue;
+    background-color: var(--theme_color);
     padding: 10px;
 }
 nav a {
     color: white;
-    display: block;
     padding: 20px;
+    display: block;
+    
 }
 h1 {
-    color: darkblue;
+    color: var(--theme_color);
+    padding: .5rem;
 }
+
+main {
+    max-width: 840px;
+}
+
 main img {
     width: 150px;
     height: auto;
     border: 1px solid white;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
+
 p {
-    padding: 0;
+    padding: 1rem;
 }
-main {
-    max-width: 840px;
-}
+
+
 aside {
     width: 20rem ;
-    margin: 1rem;
-    border: 1px dotted white;
-    padding:1rem 2rem;
-    background-color: #eee;  /* #6c93bd  #d2dfe5*/
-    color: #333;
+    text-align: center;
+    position: relative;
+   
 }
 aside img {
     width: 200px;
     height: auto;
 }
 
+aside h2 {
+    color: rgb(78, 49, 23);
+    position:absolute;
+    top: 20px;
+    left: 62px;
+}
+
 footer {
-    margin-top: 15px;
+    margin-top: 1rem;
     border-top: 1px dotted rgb(0 0 0 /.5);
     text-align: center;
+}
+
+
+/* Class Selectors */
+
+.box {
+    margin: 1rem;
+    border: 1px dotted rgba(255, 255, 255, 0.1);
+    padding: 1rem;
+    background-color: var(--background_clr_arena);
+    color: #333;
+}
+
+.indent {
+    clear: both;
+    padding-left: 2rem; 
 }
