finished W04 code along activity

--- a/week04/styles/layout-exercises.css
+++ b/week04/styles/layout-exercises.css
@@ -23,18 +23,23 @@ div {
 
 .flex {
     background-color: #aba;
-    /* write declarations here */
+    display: flex;/* write declarations here */
+    align-items: center;
+    justify-content: center;
 
 }
 
 .grid {
     background-color: #abb;
-    /* enter declarations here */
+    display: grid;/* enter declarations here */
+    place-items: center;
 
 }
 
 .container2 {
-    /* write declarations here */
+   display: flex; /* write declarations here */
+   flex-flow: row wrap;
+   justify-content: space-around;
 
 }
 
@@ -44,12 +49,13 @@ div {
 }
 
 .container3 {
-    /* write declarations here */
-
+  display: grid;  /* write declarations here */
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .columns-3 {
-    /* write declaration here */
+  grid-column:1/4;  /* write declaration here */
+
 
 }
 
