--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,23 +14,41 @@ body {
     font-family:"Lexend Deca", sans-serif; ;
 }
 
+header,
+footer, .grid {
+max-width: 840px;
+margin: 0 auto;
+}
+
 nav {
     background-color: var(--theme_color);
     padding: 10px;
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    
+    
 }
 nav a {
+
     color: white;
     padding: 20px;
     display: block;
-    
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 700
 }
 h1 {
     color: var(--theme_color);
     padding: .5rem;
+    border-bottom: 1px solid var(--theme_color) ;
 }
+
 
 main {
     max-width: 840px;
+    grid-column: 2/3;
+    margin: 1rem;
 }
 
 main img {
@@ -44,7 +62,7 @@ main img {
 }
 
 p {
-    padding: 1rem;
+    margin: 1rem;
 }
 
 
@@ -52,6 +70,8 @@ aside {
     width: 20rem ;
     text-align: center;
     position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
    
 }
 aside img {
@@ -86,4 +106,9 @@ footer {
 .indent {
     clear: both;
     padding-left: 2rem; 
+}
+
+.grid{
+display: grid;
+align-items: center;
 }
