--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -14,10 +14,31 @@
     box-sizing: border-box;
 }
 
+
 header {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    align-items: center;
+    margin: 1rem auto;
+    max-width: 1000px;
     background-color: var(--primary-color);
     color: var(--accent2-color);
     padding: 10px;
+}
+
+.navigation {
+    display: flex;
+    list-style: none;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.navigation a {
+    font-family: var(--body-font);
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--accent1-color);
 }
 
 body {
@@ -40,6 +61,16 @@ nav, p, section, article {
     padding: .5rem;
 }
 
+.history {
+ display: grid;
+ grid-template-columns: 1fr 200px 1fr;
+ align-items: center;
+}
+
+.socialmedia img {
+    height: 50px;
+    width: auto;
+}
 .socialmedia a {
     text-decoration: none;
 }
@@ -91,4 +122,30 @@ width: 80px;
 margin: 10px;
 border-radius:5px;   
 box-shadow: 0px 0px 10px var(--shadow-clr) ;    
+}
+
+.adventure {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.adventure figcaption {
+    margin: 1rem auto;
+    text-align: center;
+}
+
+.adventure img {
+    margin: 1rem auto;
+    display: flex;
+    justify-content: space-evenly;
+    height: 100px;
+    width: auto;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    margin-top: 1rem;
 }
