--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -85,7 +85,7 @@ nav, p, section, article {
     height: auto;
 }
 
-h1 {
+.hero h1 {
     position: absolute;
     top: 20px;
     width: 100%;
@@ -94,13 +94,16 @@ h1 {
     opacity: 0.8;
     background-color: var(--accent1-color);
     color: #fff;
-}
+} 
 
-h2 { 
-   background-color: var(--accent1-color); 
-   width: 100%;
-   padding: 10px;
-   text-align: center;
+h2, h1 { 
+    width: 100%;
+    padding: 10px;
+    background-color: var(--accent1-color);
+    opacity: 0.9;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
 }
 
 .hero article {
@@ -184,7 +187,7 @@ footer p {
     margin-right: .5rem;
 }
 
- iframe.map {
+ .map iframe{
     border: 0;
     width:100%; 
     height:100%;
